--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
 </head>
   <body class="font-display antialiased">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
